# VaporWault

./: .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  VENDOR_SETUP.md  pytest.ini
.github/workflows/: ci.yml  release.yml
TODO/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-027.md  TASK-028.md  TASK-029.md  TASK-030.md  TASK-031.md  TASK-032.md  TASK-033.md  TASK-034.md  TASK-035.md  TASK-036.md  TASK-037.md  TASK-038.md  TASK-039.md  TASK-040.md  (+45 more)
docs/: DEPLOYMENT.md  PROTOCOL.md  RELEASE.md  STYLE.md
packaging/linux/: client.conf.example  client_install.sh  install.sh  server.conf.example  vapourwault-daemon.service  vapourwaultd.service
packaging/windows/: Install-VaporWault.ps1  Install-VaporWaultClient.ps1  client.conf.example  server.conf.example
src/: main.c
src/client/: CMakeLists.txt  main.c  main_cli.c  vw_cache.c  vw_cache.h  vw_client_cli.c  vw_client_cli.h  vw_client_core.c  vw_client_core.h  vw_daemon.c  vw_daemon.h  vw_ipc.c  vw_ipc.h  vw_sync.c  vw_sync.h  vw_watch.h  vw_watch_linux.c  vw_watch_windows.c
src/core/: CMakeLists.txt  vw_crypto.c  vw_crypto.h  vw_fs.c  vw_fs.h  vw_net.c  vw_net.h  vw_proto.c  vw_proto.h
src/gui/client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  main.cpp  vw_gui_ipc.cpp  vw_gui_ipc.h
src/gui/client/views/: vw_view_browser.cpp  vw_view_browser.h  vw_view_login.cpp  vw_view_login.h  vw_view_queue.cpp  vw_view_queue.h  vw_view_settings.cpp  vw_view_settings.h
src/gui/server/: CMakeLists.txt  ServerApp.cpp  ServerApp.h  main.cpp  vw_server_conn.cpp  vw_server_conn.h
src/gui/server/views/: vw_view_audit.cpp  vw_view_audit.h  vw_view_cluster.cpp  vw_view_cluster.h  vw_view_dashboard.cpp  vw_view_dashboard.h  vw_view_login.cpp  vw_view_login.h  vw_view_users.cpp  vw_view_users.h
src/gui/stub/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.c  main_server_cli.c  vw_acme.c  vw_acme.h  vw_admin.c  vw_admin.h  vw_auth.c  vw_auth.h  vw_auth_provider.c  vw_auth_provider.h  vw_cluster.c  vw_cluster.h  vw_ddns.c  vw_ddns.h  vw_file_handlers.c  vw_file_handlers.h  vw_gc.c  vw_gc.h  vw_invite.c  vw_invite.h  vw_oplog.c  vw_oplog.h  vw_recovery.c  vw_recovery.h  vw_server_cli.c  vw_server_cli.h  vw_server_core.c  vw_server_core.h  vw_server_main.c  vw_server_main.h  vw_smtp.c  vw_smtp.h  vw_storage.c  vw_storage.h  vw_store.c  vw_store.h  vw_store_files.c  vw_winsvc.c
tests/: README.md  serverping.c
tests/e2e/: conftest.py  test_sync.py
tests/fuzz/: CMakeLists.txt  fuzz_admin_dispatch.c  fuzz_cluster_hello.c  fuzz_oplog_replay.c  fuzz_path_validate.c  fuzz_proto_recv.c  gen_corpus.py  run_regression.sh
tests/fuzz/corpus/fuzz_admin_dispatch/: conn_list  header_only  oplog_tail_10  oplog_tail_100  reload_cert  set_quota  truncated  unknown_type  user_create  user_create_admin  user_list
tests/fuzz/corpus/fuzz_cluster_hello/: hostname_overflow  too_short_51  valid_basic  valid_ipv6_host  valid_long_host  valid_max_proto  valid_no_hostname  valid_watermark  zero_node_id
tests/fuzz/corpus/fuzz_oplog_replay/: bad_crc  large_payload  noop_entry  oversize_payload_len  partial_header  single_valid  three_valid  two_valid  unconfirmed_tail
tests/fuzz/corpus/fuzz_path_validate/: boundary_long  invalid_backslash  invalid_comp_trav  invalid_nul  valid_deep  valid_spaces  valid_unicode
tests/fuzz/corpus/fuzz_proto_recv/: auth_request_valid  chunk_query_1hash  chunk_upload  file_commit  file_commit_one_chunk  file_delete  file_list  header_only  hello_valid  session_resume  truncated  unknown_type  wrong_version
tests/integration/: CMakeLists.txt  conftest.py  gen_test_cert.sh  run_integration.py  server_fixture.py  test_auth.py  test_auth_handshake.c  test_cluster.py  test_dedup.py  test_file_ops.py  test_gc.py  test_quota.py  vw_client.py
tests/perf/: bench.py
tests/unit/: CMakeLists.txt  test_vw_auth.c  test_vw_crypto.c  test_vw_fs.c  test_vw_gc.c  test_vw_net.c  test_vw_oplog.c  test_vw_proto.c  test_vw_smtp.c  test_vw_store.c  vw_test.h
tools/: CMakeLists.txt
tools/vwdump/: CMakeLists.txt  main.c
